# merino-py

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  404.html  AI_POLICY.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  api.html  book.toml  catalog-info.yaml  data.html  firefox.html  index.html  intro.html  manifest.html  metrics.yaml  ops.html  print.html  pyproject.toml  requirements.txt  searchindex.js  searchindex.json  social-contract.html  top_picks_domains.csv  version.json
.circleci/: config.yml
.claude/rules/: add-csv-model.md  add-provider.md  architecture.md  configuration.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-docker-image.yaml  build-dockerhub-app-image.yaml  build-dockerhub-locust-image.yaml  build-gar-image-fleece.yaml  build-gar-image-locust.yaml  build-gar-image.yaml  build-locust-image.yaml  checks.yaml  ci.yaml  docs-build.yaml  docs-publish-github-pages.yaml  main-workflow.yaml  pr-workflow.yaml  publish-docker-image.yaml  publish-dockerhub-app-image.yaml  publish-dockerhub-locust-image.yaml  publish-gar-image-fleece.yaml  publish-gar-image-locust.yaml  publish-gar-image.yaml  publish-locust-image.yaml  tests.yaml  upload-test-artifacts-to-gcs.yaml  upload-to-gcs.yaml
adr/: 0001-locust-vs-k6-merino-py-performance-test-framework.html  0002-merino-general-response.html  0003-test-containers.html  0004-default-load-tests.html  0005-asynchronous-gcs-client.html  index.html
dev/: .env  Dockerfile.elasticsearch  content-moderation.html  dependencies.html  docker-compose.yaml  es-setup.sh  feature_flags.html  index.html  kinto.ini  logging-and-metrics.html  make-all-docs.sh  middlewares.html  profiling.html  provider-explorer-config.json  provider-explorer.html  release-process.html  start-local-gcs-emulator.sh  testing.html  top_domains_v1.json  top_picks.json  top_picks_for_ci.json  wait-for-it.sh  wiki_provider_block_list_ci.txt
dev/elasticsearch/: Dockerfile  setup.sh
dev/es-indexes/: sports-en.json
dev/gcs/: setup.sh
dev/query_normalization/: word_freq.csv
dockerfiles/: Dockerfile  Dockerfile-fleece
docs/: SUMMARY.md  WIP_data.md  api.md  data.md  firefox.md  fleece-pii-detection.md  intro.md  manifest.md  noob_guide.md  ops.md  social-contract.md  working agreement.md
docs/adr/: 0000-local-and-test-metrics.md  0001-locust-vs-k6-merino-py-performance-test-framework.md  0002-merino-general-response.md  0003-test-containers.md  0004-default-load-tests.md  0005-asynchronous-gcs-client.md  0010-monorepo.md  (+5 more)
k8s/: README.md  REMOTE_README.md  ohttp_gateway_test.html
merino/: CLAUDE.md  config.py  config_logging.py  config_sentry.py  config_trace.py  cron.py  exceptions.py  featureflags.py  flags.py  hpke.py  main.py  metrics.py  remotesettings.py  runtime.py  server.py
merino-common/: CLAUDE.md  README.md  pyproject.toml
merino-common/merino_common/: __init__.py
merino-common/merino_common/app_configs/: __init__.py  config_logging.py  config_sentry.py
merino-common/merino_common/models/: __init__.py  suggest_logging.py
merino-common/merino_common/routers/: __init__.py
merino-common/merino_common/testing/: __init__.py  metrics.py
merino-common/merino_common/utils/: __init__.py  async_batch_queue.py  version.py
merino-common/tests/unit/: __init__.py
merino-common/tests/unit/app_configs/: __init__.py  test_config_logging.py  test_config_sentry.py
merino-common/tests/unit/models/: __init__.py  test_suggest_logging.py
merino-common/tests/unit/routers/: __init__.py  test_dockerflow.py
merino-common/tests/unit/utils/: __init__.py  test_async_batch_queue.py  test_version.py
merino-fleece/: CLAUDE.md  README.md  metrics.yaml  pyproject.toml
merino-fleece/merino_fleece/: app.py  main.py
merino-fleece/merino_fleece/api/: __init__.py
merino-fleece/merino_fleece/api/v1/: __init__.py  pii.py  search_terms.py
merino-fleece/merino_fleece/configs/: __init__.py  default.toml  development.toml  production.toml  testing.toml
merino-fleece/merino_fleece/pii/: __init__.py  detector.py
merino-fleece/merino_fleece/utils/: __init__.py  metrics.py
merino-fleece/tests/unit/: conftest.py
merino-fleece/tests/unit/api/: __init__.py  test_dockerflow.py
merino-fleece/tests/unit/api/v1/: __init__.py  test_pii.py  test_search_terms.py
merino-fleece/tests/unit/configs/: __init__.py  test_validators.py
merino-fleece/tests/unit/pii/: __init__.py  test_detector.py  test_init.py
operations/: blocklist-nav-suggestions.html  blocklist-wikipedia.html  configs.html  elasticsearch.html  index.html  jobs.html  jobs.md#csv-remote-settings-uploader  rollback.html  testfailures.html
scripts/: import_domains.sh  quic.sh
testing/: index.html  integration-tests.html  load-tests.html  unit-tests.html
tests/: __init__.py  conftest.py  flags.py  test_config_logging.py  test_cron.py  test_featureflags.py  test_user_agent.py  types.py
tests/contract/: README.md  docker-compose.yml  pyproject.toml
tests/contract/client/: Dockerfile  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  requirements.txt
tests/contract/client/tests/: conftest.py  exceptions.py  kinto.py  models.py  test_merino.py
tests/contract/kinto-attachments/: .gitignore
tests/contract/kinto-setup/: Dockerfile  README.md  kinto_requests.py  main.py  mypy.ini  pyproject.toml
tests/contract/volumes/client/: scenarios.yml
tests/contract/volumes/kinto/: data-01.json  data-02.json  data-03-refresh.json  data-03.json  data-04.json  offline-expansion-data-01.json
tests/load/: Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup_k8s.sh
tests/load/common/: client_info.py
tests/load/kubernetes-config/: locust-master-controller.yml  locust-worker-controller.yml
tests/load/locust_tests/: __init__.py  client_info.py  kinto_client.py  locustfile.py  suggest_models.py
tests/load/locustfiles/: average_load.py  curated_recommendations.py  load.py  locustfile.py  smoke_load.py
tests/load/tests/: locustfile.py  models.py
(+1027 files in other folders)
