[tool.poetry]
name = "contract"
version = "0.1.0"
description = "Contract tests for the Merino project"
authors = ["Mozilla"]
license = "Mozilla Public License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.client.dependencies]
pydantic = "^2.4.2"
pytest = "^7.4.3"
PyYAML = "^6.0"

[tool.poetry.group.kinto.dependencies]
typer = "^0.9.0"


[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"