[tool.poetry]
name = "locust-load"
version = "0.1.0"
description = "A Merino load test framework"
authors = ["Mozilla"]
license = "Mozilla Public License Version 2.0"

[tool.poetry.dependencies]
python = "^3.11"
aiodogstatsd = "^0.16.0.post0"
dynaconf = "^3.1.11"
elasticsearch = "^8.6.2"
faker = "^18.6.1"
geoip2 = "^4.6.0"
httpx = "^0.23.3"
kinto-http = "^11.0.0"
locust = "^2.14.2"
pydantic = "^1.10.4"
redis = "^4.5.4"
starlette = "^0.26.1"
wrapt = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
