[tool.poetry]
name = "locust-load"
version = "0.1.0"
description = "A Merino load test framework"
authors = ["Mozilla"]
license = "Mozilla Public License Version 2.0"

[tool.poetry.dependencies]
python = "^3.11"
aiodogstatsd = "^0.16.0.post0"
dynaconf = "^3.2.0"
elasticsearch = "^8.8.2"
faker = "^19.1.0"
geoip2 = "^4.7.0"
httpx = "^0.24.1"
kinto-http = "^11.0.0"
locust = "^2.14.2"
pydantic = "2.1.0"
redis = "^4.6.0"
starlette = "^0.30.0"
wrapt = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
