[tool.poetry]
name = "locust-load"
version = "0.1.0"
description = "A Merino load test framework"
authors = ["Mozilla"]
license = "Mozilla Public License Version 2.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiodogstatsd = "^0.16.0.post0"
dynaconf = "^3.2.4"
elasticsearch = "^8.11.0"
faker = "^20.0.0"
geoip2 = "^4.7.0"
google-cloud-storage = "^2.6.0"
httpx = "^0.25.1"
kinto-http = "^11.0.1"
numpy = "^1.26.2"
locust = "^2.20.0"
pydantic = "2.5.0"
redis = "^5.0.1"
starlette = "^0.36.2"
wrapt = "^1.16.0"
scipy = "^1.14.1"
orjson = "^3.10.7"
tenacity = "^9.0.0"
fastapi = "^0.109.1"

[build-system]
requires = ["poetry-core>=1.8.1"]
build_backend = "poetry.core.masonry.api"
