[tool.poetry]
name = "client"
version = "0.1.0"
description = "A Python-based test framework for the contract tests"
authors = ["Mozilla"]
license = "Mozilla Public License Version 2.0"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.4"
pytest = "^7.2.0"
PyYAML = "^6.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
