[tool.poetry]
name = "kinto-setup"
version = "0.1.0"
description = "Source code for setting up Kinto for contract tests"
authors = ["Mozilla"]
license = "Mozilla Public License Version 2.0"

[tool.poetry.dependencies]
python = "^3.10"
typer = "0.6.1"
requests = "2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
