[tool.poetry]
name = "kinto-setup"
version = "0.1.0"
description = "Source code for setting up Kinto for contract tests"
authors = ["Mozilla"]
license = "Mozilla Public License Version 2.0"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
